# swift-tokio-kcp

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  Package.swift  README.md
.build/: debug.yaml  workspace-state.json
.build/arm64-apple-macosx/debug/: description.json
.build/arm64-apple-macosx/debug/Bindings.build/: module.modulemap
.build/arm64-apple-macosx/debug/TokioKcp.build/: module.modulemap
.build/arm64-apple-macosx/debug/index/db/v13/p84966--c55423/: lock.mdb
.github/workflows/: build.yml
Sources/Bindings/: Bindings.swift
Sources/BindingsFFI.xcframework/: Info.plist
Sources/BindingsFFI.xcframework/ios-arm64/BindingsFFI.framework/: BindingsFFI
Sources/BindingsFFI.xcframework/ios-arm64_x86_64-simulator/BindingsFFI.framework/: BindingsFFI
Sources/BindingsFFI.xcframework/ios-arm64_x86_64-simulator/BindingsFFI.framework/Modules/: module.modulemap
Sources/BindingsFFI.xcframework/macos-arm64_x86_64/BindingsFFI.framework/: BindingsFFI
Sources/BindingsFFI.xcframework/macos-arm64_x86_64/BindingsFFI.framework/Headers/: BindingsFFI.h
Sources/TokioKcp/: TokioKcp.swift
bindings/: .gitignore  Cargo.toml  Makefile  build.rs
bindings/src/: bindings.udl  error.rs  kcp_util.rs  lib.rs  manager.rs
builder/: Cargo.toml
builder/src/: main.rs
misc/apple/: Package.swift
output/: Package.swift
output/Sources/TokioKcp/: TokioKcp.swift
output/Sources/Wrapper/: Wrapper.swift
script/: README.md
