[workspace]
resolver = "2"

members = ["bindings", "uniffi-bindgen"]

default-members = ["bindings"]

[profile.release]
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
lto = true        # Enable Link Time Optimization
opt-level = 3     # All optimizations # https://doc.rust-lang.org/cargo/reference/profiles.html#opt-level

[workspace.dependencies]
uniffi = { version = "0.25.3" }
uniffi_bindgen = { version = "0.25.3" }
